Clean spring.out.printlns